syntax = "proto3";

package favorite;

option go_package = "./pb";

service FavoriteRpc {
    rpc AddFavorite(AddFavoriteRequest) returns (AddFavoriteResponse) {}
    rpc DelFavorite(DelFavoriteRequest) returns (DelFavoriteResponse) {}
    rpc GetVideoFavoriteCount(GetVideoFavoriteCountRequest) returns (GetVideoFavoriteCountResponse) {}
    rpc GetUserFavoriteCount(GetUserFavoriteCountRequest) returns (GetUserFavoriteCountResponse) {}
    rpc GetUserFavoritedCount(GetUserFavoritedCountRequest) returns (GetUserFavoritedCountResponse) {}
    rpc IsFavorite(IsFavoriteRequest) returns (IsFavoriteResponse) {}
    rpc GetFavoriteVideoIdList(GetFavoriteVideoIdListRequest) returns (GetFavoriteVideoListIdResponse) {}

    rpc AddCollection(AddCollectionRequest) returns (AddCollectionResponse) {}
    rpc DelCollection(DelCollectionRequest) returns (DelCollectionResponse) {}
    rpc GetUserCollectionList(GetUserCollectionIdListRequest) returns (GetUserCollectionIdListResponse) {}
    rpc GetUserCollectionCount(GetUserCollectionCountRequest) returns (GetUserCollectionCountResponse) {}
}

message AddCollectionRequest {
    int64 user_id = 1;
    int64 video_id = 2;
    int64 partition = 3;
}

message AddCollectionResponse {

}

message DelCollectionRequest {
    int64 user_id = 1;
    int64 video_id = 2;
    int64 partition = 3;
}

message DelCollectionResponse {

}

message GetUserCollectionIdListRequest {
    int64 user_id = 1;
    int64 page_num = 2;
}

message GetUserCollectionIdListResponse {
    repeated int64 video_id_list = 1;
}

message GetUserCollectionCountRequest {
    int64 user_id = 1;
}

message GetUserCollectionCountResponse {
    int64 count = 1;
}

message GetFavoriteVideoIdListRequest {
    int64 user_id = 1;
    int64 page_num = 2;
}

message GetFavoriteVideoListIdResponse {
    repeated int64 video_id_list = 1;
}

message AddFavoriteRequest {
    int64 user_id = 1;
    int64 video_id = 2;
    int64 partition = 3;
}

message AddFavoriteResponse {

}

message DelFavoriteRequest {
    int64 user_id = 1;
    int64 video_id = 2;
    int64 partition = 3;
}

message DelFavoriteResponse {

}

message GetVideoFavoriteCountRequest {
    int64 video_id = 1;
}

message GetVideoFavoriteCountResponse {
    int64 count = 1;
}

message GetUserFavoriteCountRequest {
    int64 user_id = 1;
}

message GetUserFavoriteCountResponse {
    int64 count = 1;
}

message GetUserFavoritedCountRequest {
    int64 user_id = 1;
}

message GetUserFavoritedCountResponse {
    int64 count = 1;
}

message IsFavoriteRequest {
    int64 user_id = 1;
    int64 video_id = 2;
}

message IsFavoriteResponse {
    bool is_favorite = 1;
}

